# sqlite_bignum_android_bindings

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  JNIHelp.cpp  README  android_database_SQLiteCommon.cpp  android_database_SQLiteConnection.cpp  android_database_SQLiteDebug.cpp  android_database_SQLiteGlobal.cpp
jni/sqlite/: Android.mk  android_database_SQLiteCommon.cpp  android_database_SQLiteConnection.cpp  android_database_SQLiteDebug.cpp  android_database_SQLiteGlobal.cpp
res/layout/: main.xml
sqlite3/: build.gradle
sqlite3/src/androidTest/java/org/sqlite/database/: SeeTest1.java
sqlite3/src/main/: AndroidManifest.xml
sqlite3/src/main/cpp/: CMakeLists.txt
sqlite3/src/main/cpp/sqlite/: CMakeLists.txt  sqlite3.h
sqlite3/src/main/java/org/sqlite/database/sqlite/: SQLiteConnection.java  SQLiteCursor.java  SQLiteDatabase.java
sqlite3/src/main/jni/sqlite/: Android.mk
sqlite3test/: build.gradle
sqlite3test/src/main/: AndroidManifest.xml
sqlite3test/src/main/java/org/sqlite/customsqlitetest/: MainActivity.java
src/org/sqlite/app/customsqlite/: CustomSqlite.java
src/org/sqlite/database/: CharArrayBuffer.java  DataSetObservable.java  DataSetObserver.java  DatabaseErrorHandler.java  DefaultDatabaseErrorHandler.java  IContentObserver.aidl  Observable.java  SQLException.java  StaleDataException.java
src/org/sqlite/database/sqlite/: CloseGuard.java  DatabaseObjectNotClosedException.java  ExtraUtils.java  SQLiteAbortException.java  SQLiteAccessPermException.java  SQLiteBindOrColumnIndexOutOfRangeException.java  SQLiteBlobTooBigException.java  SQLiteCantOpenDatabaseException.java  SQLiteClosable.java  SQLiteConnection.java  SQLiteConnectionPool.java  SQLiteConstraintException.java  SQLiteCursor.java  SQLiteCursorDriver.java  SQLiteCustomFunction.java  SQLiteDatabase.java  SQLiteDatabaseConfiguration.java  SQLiteDatabaseCorruptException.java  SQLiteDatabaseLockedException.java  SQLiteDatatypeMismatchException.java  SQLiteDebug.java  SQLiteDirectCursorDriver.java  SQLiteDiskIOException.java  SQLiteDoneException.java  SQLiteException.java  SQLiteFullException.java  SQLiteGlobal.java  SQLiteMisuseException.java  SQLiteOpenHelper.java  SQLiteOutOfMemoryException.java  SQLiteProgram.java  SQLiteQuery.java  SQLiteQueryBuilder.java  SQLiteReadOnlyDatabaseException.java  SQLiteSession.java  SQLiteStatement.java  SQLiteStatementInfo.java  SQLiteTableLockedException.java  SQLiteTransactionListener.java  SqliteWrapper.java
www/: index.wiki  install.wiki  tree.wiki
